# mamoru

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: dict.fst  mamoru.fst
src/: cli.rs  main.rs
