[package]
name = "mamoru"
version = "0.1.0"
authors = ["Isvane <alyhazamy@protonmail.com>"]
description = "A blazing-fast Git hook spell checker that flags typos in commit messages using finite state transducers."
repository = "https://github.com/Isvane/mamoru"
license = "MIT"
documentation = "https://docs.rs/mamoru"
readme = "./README.md"
keywords = ["git", "git-hook", "typo", "fst", "spellcheck"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fuzzies = "0.4.2"
